prevent date and time of competition being in the past (#26)
* remove unused imports and comments

* use 4 columns for timer, and 2 if less

* separate components by folders

* use footer tag for github footer component for semantic html

* use css and update naming for clarity for add new competition box

* setup postcss - use mantine breakpoint values in media queries for button to add new competition

* move mantine ui required wrappers into app.jsx from main.jsx per documentation

* update copy of add competition button, and ensure responsive width so that the button covers up a greater width of the page

* use media queries to ensure add competition box has updated border radius (so it is not too round), updated font sizes (so that it is always visible) and not too high when the height is reduced (eg when the phone is rotated to landscape)

* use css (in global.css) to style icon in the header of a bjj gi, and ensure the size is responsive to height so that when the screen is too small, height-wise, the gi is not taking up too big of a proportion on the screen

* ensure only dates after 'tomorrow' are selectable in modal - partially fixes #13

* fix: use className prop instead of class as it is jsx; feat: if date in localstorage is in the past, do not show - only the 'add competition' button is shown - fixes #13

--- a/global.css
+++ b/global.css
@@ -9,6 +9,14 @@
   src: url("./src/assets/fonts/sifonn.otf") format("opentype");
 }
 
+#headerIcon {
+  width: 6rem;
+
+  @media (max-height: $mantine-breakpoint-xs) {
+    width: 3rem;
+  }
+}
+
 #competitionNameDisplay {
   font-family: "Sifonn", sans-serif;
 }
